--- a/commandsFile.tex
+++ b/commandsFile.tex
@@ -32,6 +32,7 @@
 %PACKAGES
 \usepackage{wasysym}
 \usepackage{pifont}
+\usepackage{float}
 
 \newcommand{\supported}{\ding{52}\xspace}
 \newcommand{\unsupported}{\ding{55}\xspace}
