--- a/Files/introduction.tex
+++ b/Files/introduction.tex
@@ -34,9 +34,31 @@ All the required supported companies provide aforementioned services.
 {To be retrive from google docs}
 
 \subsection{Definitions, Acronyms, Abbreviations}
-Retrive from Google Docs
+
+\subsubsection{Definitions}
+\begin{itemize}
+	\item API(s) : Application Program Interface(s)
+	\item RASD : Requirement Analysis Specification Document
+	\item Appointment: location the user has to reach at a fixed date and time
+	\item Route: journey between two appointments, it is composed by a series of paths
+	\item Path: part of a route traversed with a specific mean of transport
+\end{itemize}
+
+
+\subsubsection{Acronyms}
+\begin{itemize}
+	\item UI: User Interface
+\end{itemize}
+
+\subsubsection{Abbreviations}
+\begin{itemize}
+	\item MA (Mobile Application): part of the system
+	\item PT: Public Transportation
+\end{itemize}
 
 \subsection{Revision history}
+
+
 
 
 \subsection{References}
@@ -46,7 +68,6 @@ Retrive from Google Docs
 	\item Specification Document assigned: \texttt{“Mandatory\_Project\_Assignments.pdf”}
 	\item Software Requirements Specification Guidelines : IEEE 830-1998
 	\item Alloy Website: \url{http://alloy.mit.edu/alloy/}
-	\item BetterTaxi Api: \url{https://www.bettertaxi.com/developers/}
 \end{itemize}
 
 \subsection{Document Structure}
